--- a/gatorcan-frontend/package.json
+++ b/gatorcan-frontend/package.json
@@ -11,10 +11,12 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.777.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
     "@mui/styles": "^6.4.6",
+    "@schedule-x/calendar": "^2.25.0",
     "@schedule-x/current-time": "^2.21.0",
     "@schedule-x/drag-and-drop": "^2.21.0",
     "@schedule-x/event-modal": "^2.21.0",
@@ -25,6 +27,7 @@
     "axios-mock-adapter": "^2.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-chat-widget": "^3.1.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "^3.0.1"
