--- a/gatorcan-frontend/package.json
+++ b/gatorcan-frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest --watch"
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.777.0",
