--- a/gatorcan-frontend/package.json
+++ b/gatorcan-frontend/package.json
@@ -23,8 +23,10 @@
     "@schedule-x/events-service": "^2.21.0",
     "@schedule-x/react": "^2.21.0",
     "@schedule-x/theme-default": "^2.21.0",
+    "aws-amplify": "^6.14.2",
     "axios": "^1.7.9",
     "axios-mock-adapter": "^2.1.0",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-chat-widget": "^3.1.4",
